# Voice_Chatbot

./: .gitignore  data_store.py  generate_rag_response.py  ingest_data.py  input_data.py  integrated_backend.py  main.py  output_data.py  pyproject.toml  requirements.txt  run_agent.py  run_bot.py  session_manager.py  test_22.py  testr.py  testr2.py  tts_streaming.py
agents/: agent_prompts.py  tools_executor.py
agents/tools/: bank_tool.py  code_tool.py  email_tool.py  search_tool.py
frontend-react/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-react/src/: App.tsx
frontend-react/src/api/: axiosInstance.js  chatApi.js
ingestion/: ingestion_engine.py  pdf_parser.py  web_scraper.py
retrieval/: hybrid_search.py  vector_store.py
utils/: config.py
voice_bot/: agentic_bot.py  audio_handler.py  dcb_bot.py
