[project]
name = "voice-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.124.2",
    "google-genai>=1.55.0",
    "pinecone>=8.0.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
